--- a/package.json
+++ b/package.json
@@ -2,15 +2,33 @@
   "name": "app.midni.ru",
   "version": "0.1.0",
   "private": true,
+  "description": "Web client application",
+  "author": "Roman Pashnev <crsprt@gmail.com>",
+  "homepage": "https://github.com/crispart/app.midni.ru#readme",
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/crispart/app.midni.ru.git"
+  },
+  "bugs": {
+    "url": "https://github.com/crispart/app.midni.ru/issues"
+  },
   "scripts": {
-    "serve": "vue-cli-service serve",
-    "build": "vue-cli-service build",
+    "serve": "vue-cli-service serve --port 3000",
+    "build": "vue-cli-service build --modern",
     "test:unit": "vue-cli-service test:unit",
     "lint": "vue-cli-service lint"
   },
   "dependencies": {
+    "@auth0/auth0-vue": "^1.0.2",
+    "@vueuse/core": "^9.3.1",
+    "axios": "^1.1.3",
     "core-js": "^3.8.3",
+    "dayjs": "^1.11.5",
+    "maska": "^1.5.0",
+    "modern-normalize": "^1.1.0",
+    "pinia": "^2.0.23",
     "register-service-worker": "^1.7.2",
+    "vee-validate": "^4.7.0",
     "vue": "^3.2.13",
     "vue-router": "^4.0.3"
   },
