--- a/.gitignore
+++ b/.gitignore
@@ -1,25 +1,8 @@
-.DS_Store
-node_modules
-/dist
-
-# local env files
-.env.local
-.env.*.local
-
-# Log files
-npm-debug.log*
-yarn-debug.log*
-yarn-error.log*
-pnpm-debug.log*
-
-# Editor directories and files
+# файлы и директории редактора
 .idea
 .vscode
-*.suo
-*.ntvs*
-*.njsproj
-*.sln
-*.sw?
 
-# Custom filter
+# файлы и директории проекта
+node_modules
+dist
 package-lock.json
