Перенести параметры конфигурации провайдера авторизации в .env

--- a/.env
+++ b/.env
@@ -1,3 +1,7 @@
 # global
 
 VUE_APP_RESOURCE_SERVER_URL=https://api.midni.ru/api
+
+VUE_APP_AUTH0_DOMAIN=midni.eu.auth0.com
+VUE_APP_AUTH0_CLIENT_ID=GU8b3MmSrnm5vXplF4QAKl4lPt3KGOd6
+VUE_APP_AUTH0_AUDIENCE=https://api.midni.ru
